--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,3 +1,7 @@
+Version 1.1.1
+-------------
+* Bug fix: auto reloading of ACL file fixed.
+
 Version 1.1.0
 -------------
 * SLCS configuration slcs.xml updated. No need to escape comma (,) anymore.
@@ -8,4 +12,4 @@ Version 1.0.0
 * Initial release of the SLCS server
 
 --
-$Id: CHANGELOG,v 1.1 2007/08/30 10:55:21 vtschopp Exp $
+$Id: CHANGELOG,v 1.2 2007/09/14 11:43:57 vtschopp Exp $
