--- a/doc/TODO
+++ b/doc/TODO
@@ -1,5 +1,8 @@
 TODO:
 ----
+- case insensitive attribute values: modify the attribute-defs.xml schema
+  and classes.
+  
 - read the org.glite.slcs.filter.AttributesAuthorizationFilter 
   configuration parameters from SLCSServerConfiguration file and
   not from the FilterConfig anymore. because web.xml is in the 
@@ -12,4 +15,4 @@ TODO:
 
 - solution to display audit event for all group the admin belongs to.
 --
-$Id: TODO,v 1.1 2007/09/14 11:43:28 vtschopp Exp $
+$Id: TODO,v 1.2 2007/09/14 13:05:52 vtschopp Exp $
