--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,5 +1,6 @@
 Version 1.1.1
 -------------
+* AttributeDefinition extended with caseSensitive attribute.
 * Bug fix: auto reloading of ACL file fixed.
 
 Version 1.1.0
@@ -12,4 +13,4 @@ Version 1.0.0
 * Initial release of the SLCS server
 
 --
-$Id: CHANGELOG,v 1.2 2007/09/14 11:43:57 vtschopp Exp $
+$Id: CHANGELOG,v 1.3 2007/09/18 14:54:02 vtschopp Exp $
