--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,3 +1,10 @@
+Version 1.1.2
+-------------
+* AttributeDefinitions can define case sensitiveness of attribute value. 
+* Authorization is handle based on the case sensitiveness of the attribute value.
+* Admin interface modified.
+* Refactoring: AttributeDefinitions class handles all the attributes (creation, extraction, ...).
+
 Version 1.1.1
 -------------
 * AttributeDefinition extended with caseSensitive attribute.
@@ -13,4 +20,4 @@ Version 1.0.0
 * Initial release of the SLCS server
 
 --
-$Id: CHANGELOG,v 1.3 2007/09/18 14:54:02 vtschopp Exp $
+$Id: CHANGELOG,v 1.4 2007/11/01 16:53:29 vtschopp Exp $
