--- a/doc/TODO
+++ b/doc/TODO
@@ -1,19 +1,17 @@
 TODO:
 ----
-- case insensitive attribute values: modify the attribute-defs.xml schema
-  and classes.
   
 - read the org.glite.slcs.filter.AttributesAuthorizationFilter 
   configuration parameters from SLCSServerConfiguration file and
   not from the FilterConfig anymore. because web.xml is in the 
   war file and can not be modified before deployment...
   -> add AtttributesAuthorizationFilter element in slcs.xml file
+  -> or use context parameters for ACL files
   
-- how to load log4j.xml (context param) for the filter logging too?
-
 - implement a clean and full auditor.
 
 - solution to display audit event for all group the admin belongs to.
 
 --
-$Id: TODO,v 1.3 2007/09/14 13:07:01 vtschopp Exp $
+TODO,v 1.3 2007/09/14 13:07:01 vtschopp Exp
+
