--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -3,6 +3,7 @@ Version 1.1.2
 * AttributeDefinitions can define case sensitiveness of attribute value. 
 * Authorization is handle based on the case sensitiveness of the attribute value.
 * Admin interface modified.
+* Log4J engine configured from webapps context file.
 * Refactoring: AttributeDefinitions class handles all the attributes (creation, extraction, ...).
 
 Version 1.1.1
@@ -20,4 +21,4 @@ Version 1.0.0
 * Initial release of the SLCS server
 
 --
-$Id: CHANGELOG,v 1.4 2007/11/01 16:53:29 vtschopp Exp $
+$Id: CHANGELOG,v 1.5 2007/11/01 16:56:54 vtschopp Exp $
