--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -2,6 +2,7 @@ Version 1.2.0
 -------------
 * New org.glite.slcs.caclient.impl.CMPClient (RFC4210) compatible with an EJBCA online CA 
   server added.
+* Bug fix: multi-value attributes used in DNBuilder.
 
 Version 1.1.2
 -------------
@@ -28,4 +29,4 @@ Version 1.0.0
 * Initial release of the SLCS server
 
 --
-$Id: CHANGELOG,v 1.8 2007/11/16 13:40:19 vtschopp Exp $
+$Id: CHANGELOG,v 1.9 2007/12/21 10:07:59 vtschopp Exp $
