--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,3 +1,7 @@
+Version 1.3.0
+-------------
+* Dependencies on JPackage jakarta-commons-* packages.
+
 Version 1.2.0
 -------------
 * New org.glite.slcs.caclient.impl.CMPClient (RFC4210) compatible with an EJBCA online CA 
@@ -29,4 +33,4 @@ Version 1.0.0
 * Initial release of the SLCS server
 
 --
-$Id: CHANGELOG,v 1.9 2007/12/21 10:07:59 vtschopp Exp $
+$Id: CHANGELOG,v 1.10 2008/04/22 15:47:00 vtschopp Exp $
