--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,3 +1,7 @@
+Version 1.3.1
+-------------
+* Bug fix: unmapped name-value pair in mappedValue(...) throws an exception.
+
 Version 1.3.0
 -------------
 * Dependencies on JPackage jakarta-commons-* packages.
@@ -33,4 +37,4 @@ Version 1.0.0
 * Initial release of the SLCS server
 
 --
-$Id: CHANGELOG,v 1.10 2008/04/22 15:47:00 vtschopp Exp $
+$Id: CHANGELOG,v 1.11 2008/05/06 12:24:32 vtschopp Exp $
