--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,3 +1,8 @@
+Version 1.3.2
+-------------
+* The ACL filters (user, admin) filename can be defined in the servlet context.xml file
+  as UserACLFile and AdminACLFile parameters.
+
 Version 1.3.1
 -------------
 * Bug fix: unmapped name-value pair in mappedValue(...) throws an exception.
@@ -37,4 +42,4 @@ Version 1.0.0
 * Initial release of the SLCS server
 
 --
-$Id: CHANGELOG,v 1.11 2008/05/06 12:24:32 vtschopp Exp $
+$Id: CHANGELOG,v 1.12 2008/05/06 14:29:26 vtschopp Exp $
