--- a/doc/TODO
+++ b/doc/TODO
@@ -1,10 +1,9 @@
 TODO:
 ----
-  
+- clean up the AttributeDefinitionFile and the AccessControlListEditor/ACLFile, 
+  AccessControlListEditor/AdminACLFile and try to use the servlet context parameters.  
 - implement a clean and full auditor.
-
-- solution to display audit event for all group the admin belongs to.
+- find a solution to display the audit events for all group the admin belongs to.
 
 --
-TODO,v 1.3 2007/09/14 13:07:01 vtschopp Exp
-
+$Id: TODO,v 1.8 2008/07/01 13:04:36 vtschopp Exp $
