--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,3 +1,7 @@
+Version 1.4.0
+-------------
+* The DNBuilder uses the X509PrincipalUtil to validate and normalize the constructed DN.
+
 Version 1.3.2
 -------------
 * The ACL filters (user, admin) filename can be defined in the servlet context.xml file
@@ -42,4 +46,4 @@ Version 1.0.0
 * Initial release of the SLCS server
 
 --
-$Id: CHANGELOG,v 1.12 2008/05/06 14:29:26 vtschopp Exp $
+$Id: CHANGELOG,v 1.13 2008/07/01 13:15:33 vtschopp Exp $
