--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,3 +1,8 @@
+Version 1.4.2
+-------------
+* BUG FIX: DNBuilder escape special characters '+', '=', '<', '>', ',' and ';' in attribute
+  values.
+
 Version 1.4.1
 -------------
 * SECURITY FIX: The method SLCSSessions.getSession(token,dn) must not return a session if the 
@@ -53,4 +58,4 @@ Version 1.0.0
 * Initial release of the SLCS server
 
 --
-$Id: CHANGELOG,v 1.16 2008/08/21 10:42:16 vtschopp Exp $
+$Id: CHANGELOG,v 1.17 2009/01/20 12:21:34 vtschopp Exp $
